--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div>
-  <h1>from app component</h1>
+  <h1>{{message}}</h1>
 </div>
-<app-test [parentData]="name"></app-test>
+<app-test (childEvent)="message=$event" ></app-test>
